Fix space characters getting collapsed

--- a/src/css/editable.less
+++ b/src/css/editable.less
@@ -3,7 +3,7 @@
   .mathquill-root-block {
     .inline-block;
     width: 100%;
-    white-space: nowrap;
+    white-space: pre;
     overflow: hidden;
     // this is to make sure that characters like "y" aren't cut off
     padding-left: 5px;
